fix letter spacing

--- a/css/leon.css
+++ b/css/leon.css
@@ -498,7 +498,7 @@ body{
 
 @media (max-width: 767px){
     .contact .info .link{
-      font-size: 25px;
+      font-size: 20px;
     }
 
 }
